--- a/src/app/page/home/page2/page2.component.html
+++ b/src/app/page/home/page2/page2.component.html
@@ -1,36 +1,91 @@
 <p>page2 works!</p>
 <ion-button (click)="openModal()">open</ion-button>
-<span>{{name}}</span>
+<span>{{ name }}</span>
 <!-- <ion-modal trigger="open-modal">
     123
 </ion-modal> -->
 <ion-list>
-    <!-- The reorder gesture is disabled by default, enable it to drag and drop items -->
-    <!-- Casting $event to $any is a temporary fix for this bug https://github.com/ionic-team/ionic-framework/issues/24245 -->
-    <ion-reorder-group [disabled]="false" (ionItemReorder)="handleReorder($any($event))" >
-      <ion-item>
-        <ion-label> Item 1 </ion-label>
-        <ion-reorder slot="end">=</ion-reorder>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label> Item 2 </ion-label>
-        <ion-reorder slot="end">=</ion-reorder>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label> Item 3 </ion-label>
-        <ion-reorder slot="end">=</ion-reorder>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label> Item 4 </ion-label>
-        <ion-reorder slot="end">=</ion-reorder>
-      </ion-item>
-  
-      <ion-item>
-        <ion-label> Item 5 </ion-label>
-        <ion-reorder slot="end">=</ion-reorder>
-      </ion-item>
-    </ion-reorder-group>
+  <!-- The reorder gesture is disabled by default, enable it to drag and drop items -->
+  <!-- Casting $event to $any is a temporary fix for this bug https://github.com/ionic-team/ionic-framework/issues/24245 -->
+  <ion-reorder-group
+    [disabled]="false"
+    (ionItemReorder)="handleReorder($any($event))"
+  >
+    <ion-item>
+      <ion-label> Item 1 </ion-label>
+      <ion-reorder slot="end"></ion-reorder>
+    </ion-item>
+
+    <ion-item>
+      <ion-label> Item 2 </ion-label>
+      <ion-reorder slot="end"></ion-reorder>
+    </ion-item>
+
+    <ion-item>
+      <ion-label> Item 3 </ion-label>
+      <ion-reorder slot="end"></ion-reorder>
+    </ion-item>
+
+    <ion-item>
+      <ion-label> Item 4 </ion-label>
+      <ion-reorder slot="end"></ion-reorder>
+    </ion-item>
+
+    <ion-item>
+      <ion-label> Item 5 </ion-label>
+      <ion-reorder slot="end"></ion-reorder>
+    </ion-item>
+  </ion-reorder-group>
+</ion-list>
+
+<div *appGetPlace="isLoding" class="boder-box">
+  <h1>指令测试</h1>
+  <ion-list>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="airplane" slot="start"></ion-icon>
+      <ion-label>Airplane Mode</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="wifi" slot="start"></ion-icon>
+      <ion-label>Wi-Fi</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="bluetooth" slot="start"></ion-icon>
+      <ion-label>Bluetooth</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-icon aria-hidden="true" name="call" slot="start"></ion-icon>
+      <ion-label>Cellular</ion-label>
+    </ion-item>
   </ion-list>
+  <ion-button (click)="reflash()"> 刷新 </ion-button>
+</div>
+<div *appGetPlace="!isLoding" class="boder-box">
+  <ion-list>
+    <ion-item>
+      <ion-thumbnail slot="start" style="margin-right: 30px">
+        <ion-skeleton-text [animated]="true"></ion-skeleton-text>
+      </ion-thumbnail>
+      <ion-label>
+        <h3>
+          <ion-skeleton-text
+            [animated]="true"
+            style="width: 80%"
+          ></ion-skeleton-text>
+        </h3>
+        <p>
+          <ion-skeleton-text
+            [animated]="true"
+            style="width: 60%"
+          ></ion-skeleton-text>
+        </p>
+        <p>
+          <ion-skeleton-text
+            [animated]="true"
+            style="width: 30%"
+          ></ion-skeleton-text>
+        </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+</div>
