--- a/src/app/page/home/page3/page3.component.html
+++ b/src/app/page/home/page3/page3.component.html
@@ -1,1 +1,5 @@
-<p>page3 works!</p>
+<div>
+  <p>page3 works!</p>
+  <app-cop [msg]="msg" [nameVal]="nameVal"></app-cop>
+  page3Input:<input type="text" [(ngModel)]="nameVal" placeholder="name" />
+</div>
