--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,35 +1,34 @@
-.h-box{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    h1{
-        height: 40px;
-        line-height: 30px;
-        i{
-            font-size: 18px;
-        }
-        
+.h-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  h1 {
+    height: 40px;
+    line-height: 30px;
+    i {
+      font-size: 18px;
     }
+  }
 }
-.router-link-active{
-    background-color: salmon;
-    color: white;
+.router-link-active {
+  background-color: salmon;
+  color: white !important;
 }
-ul{
-    display: flex;
-    gap: 20px;
-    flex-grow: 1;
-    align-items: center;
-    li{
-        height: auto;
-        background-color: #ccc;
-        color: black;
+ul {
+  display: flex;
+  gap: 20px;
+  flex-grow: 1;
+  align-items: center;
+  li {
+    height: auto;
+    background-color: #ccc;
+    a {
+      display: block;
+      padding: 2px 10px;
+      text-decoration: none;
+      color: black;
     }
-    a{
-        display: block;
-        padding: 2px 10px;
-        text-decoration: none;
-    }
+  }
 }
