--- a/src/app/page/home/page1/page1.component.html
+++ b/src/app/page/home/page1/page1.component.html
@@ -1,27 +1,64 @@
-<div style="border: 1px solid #999; padding: 10px; margin: 10px;box-sizing: border-box;">
-    <h3>page1组件({{msg}})</h3>
-    <br>
-    <app-child  (sendMsg)="getMsg($event)">
-        <b s1>插槽内容1</b>
-        <i s2>插槽内容2</i>
-    </app-child>
-    <br/>
-   <ion-button (click)="getData()">
-     get data
-   </ion-button>
-  {{resData | json}}
-  <br/>
-  <ion-list style="border: 1px solid #ccc;width: 200px; padding: 20px">
+<div
+  style="
+    border: 1px solid #999;
+    padding: 10px;
+    margin: 10px;
+    box-sizing: border-box;
+  "
+>
+  <h3>page1组件({{ msg }})</h3>
+  <ion-avatar style="margin: 10px">
+    <img src="/assets/images/DM_20231108192754_001.jpg" />
+  </ion-avatar>
+  <br />
+  <app-child (sendMsg)="getMsg($event)">
+    <b s1>插槽内容1</b>
+    <i s2>插槽内容2</i>
+  </app-child>
+  <br />
+  <hr />
+  <div>
+    <h2>标签引用</h2>
+    <ion-input
+      type="text"
+      placeholder="Awesome Input"
+      #myinput
+      border="1"
+    ></ion-input>
+    <ion-button (click)="onClick('123')"> Click me </ion-button>
+    <ion-label>{{ val }}</ion-label>
+  </div>
+  <hr />
+  <br />
+  {{ "0123" | getCNnumber : "CN" }}
+  {{ "4567" | getCNnumber : "EG" }}
+  <hr />
+  <br />
+  <div class="posi">
+    <img src="/assets/images/DM_20231108192754_004.jpg" alt="" />
+  </div>
+  <br />
+  <ion-button (click)="getData()"> get data </ion-button>
+  {{ resData | json }}
+  <br />
+  <ion-list style="border: 1px solid #ccc; width: 200px; padding: 20px">
     <ion-item>
       <ion-label>账号</ion-label>
-      <ion-input placeholder="输入账号" [(ngModel)]="info.name" [clearInput]="true"></ion-input>
+      <ion-input
+        placeholder="输入账号"
+        [(ngModel)]="info.name"
+        [clearInput]="true"
+      ></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>密码</ion-label>
-      <ion-input placeholder="输入密码" type="password" [(ngModel)]="info.psd" [clearInput]="true"></ion-input>
+      <ion-input
+        placeholder="输入密码"
+        type="password"
+        [(ngModel)]="info.psd"
+        [clearInput]="true"
+      ></ion-input>
     </ion-item>
-    <ion-button (click)="login()" style="margin-top: 20px">
-      LOGIN
-    </ion-button>
+    <ion-button (click)="login()" style="margin-top: 20px"> LOGIN </ion-button>
   </ion-list>
 </div>
