--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,14 +3,16 @@ li {
     display: block;
     width: 100%;
     height: 100%;
-    padding: 5px 0;
+    padding: 15px 0;
     text-decoration: none;
+    color: #ffffffcc;
+    &:hover{
+      color: white;
   }
-  background-color: darkkhaki;
+  }
   text-align: center;
-  border-bottom: 1px solid #ccc;
 }
 .router-link-active {
-  background-color: coral;
+  background-color: #3078FF;
   color: white;
 }
